<resources>
    <string name="app_name">Bisma FYP</string>
    <string name="toggle_camera">Toggle Camera</string>
    <string name="detect_object">Detect Object</string>
    <string name="feet">Height (cm)</string>
    <string name="inches">Inches</string>
    <string name="weight_pounds">Weight (Kgs)</string>
    <string name="result">Result</string>
    <string name="calculate">Calculate</string>
    <string name="next">Next</string>
    <string name="no_results">No Results</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="your_weight_in_kg">Your weight in kg</string>
    <string name="suggestion">Suggestion</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
</resources>
