<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/light_black"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:onClick="login"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/app_title_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:elevation="5dp"
            android:gravity="end|top"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/sign_in_to_continue"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/et_username_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/dw_et_bg"
            android:hint="@string/username"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorOffWhite" />

        <EditText
            android:id="@+id/et_email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/dw_et_bg"
            android:hint="@string/email"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorOffWhite" />

        <EditText
            android:id="@+id/et_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/dw_et_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorOffWhite" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/dw_et_bg"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorOffWhite" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/dw_et_bg"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="signUp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/pb_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:visibility="gone" />

    </LinearLayout>


</FrameLayout>