<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/light_black"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            style="@style/app_title_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:elevation="5dp"
            android:gravity="end|top"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_in_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:text="@string/sign_in_to_continue"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/dw_et_bg"
            android:hint="@string/email"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorOffWhite" />

        <EditText
            android:id="@+id/et_password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/dw_et_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorOffWhite" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/dw_et_bg"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="login"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <LinearLayout
            android:id="@+id/ll_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="createAccount"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="3dp"
                android:onClick="createAccount"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:visibility="gone" />

    </LinearLayout>


</FrameLayout>